language/tests/error/TypeError04.hashem
bebin main() {
  (1 > 2) || 4;  
}  
