language/tests/error/TypeError04.output
Type error at TypeError04.hashem line 2 col 3: operation "||" not defined for Boolean false, Number 4
